--- a/app1/index.html
+++ b/app1/index.html
@@ -16,7 +16,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
   </head>
+
   <body>
-    <div>App 1 Index</div>
+    <header class="hero">
+      <h1 class="hero__Title">Empowering Your Mind</h1>
+      <p class="hero__description">
+        Discover a world of learning possibilities with our
+        <span id="hero__highlight">inovative</span> educational platform.
+      </p>
+    </header>
   </body>
 </html>
