--- a/app1/index.html
+++ b/app1/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Empower Young Minds</title>
+    <!--===== Fonts =====-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!--===== Fonts =====-->
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -25,5 +27,20 @@
         <span id="hero__highlight">inovative</span> educational platform.
       </p>
     </header>
+
+    <section class="feature">
+      <div class="feature__container">
+        <div class="feature__item">
+          <h2 class="feature__title">
+            Empower Student Learning
+          </h2>
+          <p class="feature__description">
+            Our platform enhances student engagement by providing interactive
+            learning tools. Experience a seamless integration of technology that
+            supports diverse learning styles.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
