--- a/app1/index.html
+++ b/app1/index.html
@@ -20,20 +20,36 @@
   </head>
 
   <body>
+    <!-- 1. Selectors & Basic Properties - Hero Section -->
     <header class="hero">
       <h1 class="hero__Title">Empowering Your Mind</h1>
       <p class="hero__description">
         Discover a world of learning possibilities with our
-        <span id="hero__highlight">inovative</span> educational platform.
+        <span id="hero__highlight">innovative</span> educational platform.
       </p>
     </header>
 
+    <!-- 2. Fonts - Features Section -->
     <section class="feature">
       <div class="feature__container">
         <div class="feature__item">
-          <h2 class="feature__title">
-            Empower Student Learning
-          </h2>
+          <h2 class="feature__title">Empower Student Learning 1</h2>
+          <p class="feature__description">
+            Our platform enhances student engagement by providing interactive
+            learning tools. Experience a seamless integration of technology that
+            supports diverse learning styles.
+          </p>
+        </div>
+        <div class="feature__item">
+          <h2 class="feature__title">Empower Student Learning 2</h2>
+          <p class="feature__description">
+            Our platform enhances student engagement by providing interactive
+            learning tools. Experience a seamless integration of technology that
+            supports diverse learning styles.
+          </p>
+        </div>
+        <div class="feature__item">
+          <h2 class="feature__title">Empower Student Learning 3</h2>
           <p class="feature__description">
             Our platform enhances student engagement by providing interactive
             learning tools. Experience a seamless integration of technology that
@@ -41,6 +57,18 @@
           </p>
         </div>
       </div>
+    </section>
+
+    <!-- 3. Colors - Call to Action Section -->
+    <section class="cta">
+      <h3 class="cta__title">Learn More About us by Contacting Us</h3>
+      <p class="cta__description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde minus,
+        repellat voluptate nobis sunt, vero nemo repudiandae, eligendi qui
+        voluptates ratione harum id rem laborum blanditiis saepe dignissimos
+        molestias quidem.
+      </p>
+      <button class="cta__button cta__button--primary">Learn More</button>
     </section>
   </body>
 </html>
