--- a/app1/index.html
+++ b/app1/index.html
@@ -1,74 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Empower Young Minds</title>
-    <!--===== Fonts =====-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <!--===== Fonts =====-->
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-  </head>
 
-  <body>
-    <!-- 1. Selectors & Basic Properties - Hero Section -->
-    <header class="hero">
-      <h1 class="hero__Title">Empowering Your Mind</h1>
-      <p class="hero__description">
-        Discover a world of learning possibilities with our
-        <span id="hero__highlight">innovative</span> educational platform.
-      </p>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Empower Young Minds</title>
+  <!--===== Fonts =====-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+  <!--===== Fonts =====-->
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+</head>
 
-    <!-- 2. Fonts - Features Section -->
-    <section class="feature">
-      <div class="feature__container">
-        <div class="feature__item">
-          <h2 class="feature__title">Empower Student Learning 1</h2>
-          <p class="feature__description">
-            Our platform enhances student engagement by providing interactive
-            learning tools. Experience a seamless integration of technology that
-            supports diverse learning styles.
-          </p>
-        </div>
-        <div class="feature__item">
-          <h2 class="feature__title">Empower Student Learning 2</h2>
-          <p class="feature__description">
-            Our platform enhances student engagement by providing interactive
-            learning tools. Experience a seamless integration of technology that
-            supports diverse learning styles.
-          </p>
-        </div>
-        <div class="feature__item">
-          <h2 class="feature__title">Empower Student Learning 3</h2>
-          <p class="feature__description">
-            Our platform enhances student engagement by providing interactive
-            learning tools. Experience a seamless integration of technology that
-            supports diverse learning styles.
-          </p>
-        </div>
+<body>
+  <!-- 1. Selectors & Basic Properties - Hero Section -->
+  <header class="hero">
+    <h1 class="hero__Title">Empowering Your Mind</h1>
+    <p class="hero__description">
+      Discover a world of learning possibilities with our
+      <span id="hero__highlight">innovative</span> educational platform.
+    </p>
+  </header>
+
+  <!-- 2. Fonts - Features Section -->
+  <section class="feature">
+    <div class="feature__container">
+      <div class="feature__item">
+        <h2 class="feature__title">Empower Student Learning 1</h2>
+        <p class="feature__description">
+          Our platform enhances student engagement by providing interactive
+          learning tools. Experience a seamless integration of technology that
+          supports diverse learning styles.
+        </p>
       </div>
-    </section>
+      <div class="feature__item">
+        <h2 class="feature__title">Empower Student Learning 2</h2>
+        <p class="feature__description">
+          Our platform enhances student engagement by providing interactive
+          learning tools. Experience a seamless integration of technology that
+          supports diverse learning styles.
+        </p>
+      </div>
+      <div class="feature__item">
+        <h2 class="feature__title">Empower Student Learning 3</h2>
+        <p class="feature__description">
+          Our platform enhances student engagement by providing interactive
+          learning tools. Experience a seamless integration of technology that
+          supports diverse learning styles.
+        </p>
+      </div>
+    </div>
+  </section>
 
-    <!-- 3. Colors - Call to Action Section -->
-    <section class="cta">
-      <h3 class="cta__title">Learn More About us by Contacting Us</h3>
-      <p class="cta__description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde minus,
-        repellat voluptate nobis sunt, vero nemo repudiandae, eligendi qui
-        voluptates ratione harum id rem laborum blanditiis saepe dignissimos
-        molestias quidem.
-      </p>
-      <button class="cta__button cta__button--primary">Learn More</button>
-    </section>
-  </body>
+  <!-- 3. Colors - Call to Action Section -->
+  <section class="cta">
+    <h3 class="cta__title">Learn More About us by Contacting Us</h3>
+    <p class="cta__description">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde minus,
+      repellat voluptate nobis sunt, vero nemo repudiandae, eligendi qui
+      voluptates ratione harum id rem laborum blanditiis saepe dignissimos
+      molestias quidem.
+    </p>
+    <button class="cta__button cta__button--primary">Learn More</button>
+  </section>
+
+  <!-- 4. Box Model - Video Section -->
+  <section class="video">
+    <h3 class="video__title">Grow Yout Child's Future</h3>
+    <p class="video__description">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur optio repudiandae natus ipsa omnis velit est
+      alias earum dolores? Et.
+    </p>
+    <div class="video__controls">
+      <button class="video__button video__button--primary">
+        <i class="fas fa-book"></i> Learn More
+      </button>
+      <button class="video__button video__button--secondary">
+        <i class="fas fa-play-circle"></i> Learn More
+      </button>
+    </div>
+    <div class="video__container"></div>
+
+  </section>
+</body>
+
 </html>
