a css video section

--- a/app1/index.html
+++ b/app1/index.html
@@ -16,6 +16,24 @@
 </head>
 
 <body>
+  <!-- 4. Box Model - Video Section -->
+  <section class="video">
+    <h3 class="video__title">Grow Yout Child's Future</h3>
+    <p class="video__description">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur optio repudiandae natus ipsa omnis velit est
+      alias earum dolores? Et.
+    </p>
+    <div class="video__controls">
+      <button class="video__button video__button--primary">
+        <i class="fas fa-book"></i> Learn More
+      </button>
+      <button class="video__button video__button--secondary">
+        <i class="fas fa-play-circle"></i> Learn More
+      </button>
+    </div>
+    <div class="video__container"></div>
+  </section>
+
   <!-- 1. Selectors & Basic Properties - Hero Section -->
   <header class="hero">
     <h1 class="hero__Title">Empowering Your Mind</h1>
@@ -83,7 +101,6 @@
       </button>
     </div>
     <div class="video__container"></div>
-
   </section>
 </body>
 
