--- a/app1/index.html
+++ b/app1/index.html
@@ -21,13 +21,42 @@
 
   <body>
     <!--** Test HERE! --------------------------------------------------->
-    <!-- 5. Flex - Programs Section -->
-    <section class="programs">
-      <h2>Explore Our State of Art Experience</h2>
-      <div class="programs__cards">
-        <div class="programs__card"></div>
-        <div class="programs__card"></div>
-        <div class="programs__card"></div>
+    <!-- 6. HTML Elements & Images - Form Section -->
+    <section class="element">
+      <div class="element__left">
+        <div class="element__placeholder"></div>
+      </div>
+
+      <div class="element__right">
+        <h2>Sign Up Today Now!</h2>
+        <p class="eleement__subtitle">
+          Fill Out tht form below to get latest updates and news
+        </p>
+        <form class="element__form">
+          <h3>Your Interests:</h3>
+          <ul class="element__lists">
+            <li class="element__lists-item">Web Dev</li>
+            <li class="element__lists-item">UXUI Design</li>
+            <li class="element__lists-item">Digital Marketing</li>
+          </ul>
+
+          <div class="element__form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" placeholder="Enter username" />
+          </div>
+
+          <div class="element__form-group">
+            <label for="username">Select Course:</label>
+            <select id="course">
+              <option value="">Choose a course...</option>
+              <option value="">HTML & CSS</option>
+              <option value="">Javascript</option>
+              <option value="">React</option>
+            </select>
+          </div>
+
+          <button type="submit" class="element__button">Submit Form</button>
+        </form>
       </div>
     </section>
     <!--** Test HERE! --------------------------------------------------->
@@ -108,6 +137,44 @@
         <div class="programs__card"></div>
         <div class="programs__card"></div>
         <div class="programs__card"></div>
+      </div>
+    </section>
+
+    <!-- 6. HTML Elements & Images - Form Section -->
+    <section class="element">
+      <div class="element__left">
+        <div class="eleement__placeholder"></div>
+      </div>
+      <div class="element__right">
+        <h2>Sign Up Today Now!</h2>
+        <p class="eleement__subtitle">
+          Fill Out tht form below to get latest updates and news
+        </p>
+        <form class="element__form">
+          <h3>Your Interests:</h3>
+          <ul class="elemenet__lists">
+            <li class="elemenet__lists-item">Web Dev</li>
+            <li class="elemenet__lists-item">UXUI Design</li>
+            <li class="elemenet__lists-item">Digital Marketing</li>
+          </ul>
+
+          <div class="element__form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" placeholder="Enter username" />
+          </div>
+
+          <div class="element__form-group">
+            <label for="username">Select Course:</label>
+            <select id="course">
+              <option value="">Choose a course...</option>
+              <option value="">HTML & CSS</option>
+              <option value="">Javascript</option>
+              <option value="">React</option>
+            </select>
+          </div>
+
+          <button type="submit" class="element__button">Submit Form</button>
+        </form>
       </div>
     </section>
   </body>
